# simulacra

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  RATE_LIMITING.md  README.md  SECURITY.md  Specifications.md  pyproject.toml
.kiro/specs/simulacra-improvements/: SUMMARY.md  design.md  requirements.md  tasks.md
scripts/: run_tests.sh  verify_system.sh
src/backend/: __init__.py  mcp_server.py
src/backend/agent/: __init__.py  coordinator.py
src/backend/app/: __init__.py  main.py
src/backend/core/: __init__.py  debate.py  persona.py
src/backend/tools/: __init__.py  debate_tools.py
src/frontend/: index.html  jest.config.cjs  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  env.jest.js  env.js  index.css
src/frontend/src/__tests__/: App.test.jsx
src/frontend/src/components/: DebateView.jsx  Message.jsx  MessageList.jsx
src/frontend/src/components/__tests__/: DebateView.test.jsx  Message.test.jsx  MessageList.test.jsx
tests/: __init__.py  conftest.py  test_app.py  test_core.py  test_tools.py
